<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"

            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/poster_mov_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/postermovie"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/image"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="favourite"
        android:src="@drawable/heart"
        app:backgroundTint="#FFFF"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_mov_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginRight="110dp"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/detail"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="20sp" />

            </LinearLayout>


            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#c8e6c9"
                        android:drawableLeft="@drawable/event"
                        android:padding="10dp"
                        android:text="@string/rls_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/release_date_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFF"
                        android:padding="@dimen/detail_activity_margin"
                        android:text="@string/rls_date" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#c8e6c9"
                        android:drawableLeft="@drawable/synopsis"
                        android:padding="10dp"
                        android:text="@string/synopsis"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/synopsis_mov_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFF"
                        android:padding="@dimen/detail_activity_margin"
                        android:text="@string/synopsis_movie" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>